fixed edit itinerary bottom margins from sticking out

--- a/client/src/components/User/User.scss
+++ b/client/src/components/User/User.scss
@@ -136,6 +136,7 @@
       border-radius: 1rem;
       width: 5px;
       height: 5px;
+      transform: scale(1.5);
       // background-color: $blue;
       // color: $white;
       // font-size: 1rem;
@@ -170,6 +171,7 @@
       // }
       &:hover {
         cursor: pointer;
+        transform: scale(2);
         // color: rgb(209, 189, 189);
         &:before {
           width: 100%;
@@ -182,6 +184,7 @@
       border-radius: 1rem;
       width: 5px;
       height: 5px;
+      margin-right: 0.5rem;
       // background-color: $blue;
       // color: $white;
       // font-size: 1rem;
@@ -217,6 +220,7 @@
       &:hover {
         cursor: pointer;
         // color: #fff;
+        transform: scale(1.4);
         &:before {
           width: 100%;
         }
