--- a/client/src/pages/EditItinerary/EditItinerary.scss
+++ b/client/src/pages/EditItinerary/EditItinerary.scss
@@ -50,12 +50,11 @@
     }
     &__username {
       display: block;
-  
-      margin: 0.9vw 0;
+      margin: 0.5rem 0 1rem 0;
       border: 0;
       border-radius: 5px;
       font-size: 1.65rem;
-      margin-bottom: 2rem;
+     
       // &Contanier {
       // }
     }
@@ -65,7 +64,7 @@
       // width: 90%;
       width: 100%;
       // height: 7.0625rem;
-      height: 20rem;
+      height: 19rem;
       margin: 1rem 0 0 0;
       white-space: pre-line;
 
@@ -127,5 +126,9 @@
         }
     }
     }
+
+    // &__form {
+    //   height: 100%;
+    // }
   }
   
